--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,60 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+
+<head>
+  <title>Administrador de Personal</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+    crossorigin="anonymous">
+  <link rel='stylesheet' href='/stylesheets/style.css' />
+</head>
+
+<body>
+  <!-- Image and text -->
+  <nav class="navbar navbar-light bg-warning">
+    <a class="navbar-brand text-info" href="#">
+      <img src="/images/santa.png" width="30" height="30" class="d-inline-block align-top" alt="">
+      Administrador de Personal
+    </a>
+  </nav>
+  <div class="container">
+    <form class="form-inline mt-5">
+      <div class="form-group mx-sm-3 mb-2">
+        <label for="materia" class="sr-only">Materia</label>
+        <input type="text" class="form-control" id="materia" placeholder="Campo 1">
+      </div>
+      <div class="form-group mx-sm-3 mb-2">
+        <label for="uv" class="sr-only">Uv</label>
+        <input type="text" class="form-control" id="uv" placeholder="Campo 2">
+      </div>
+      <div class="form-group mx-sm-3 mb-2">
+        <label for="descripcion" class="sr-only">Descripcion</label>
+        <input type="text" class="form-control" id="descripcion" placeholder="Campo 3">
+      </div>
+      <button type="submit" class="btn btn-primary mb-2">Guardar</button>
+    </form>
+
+    <table class="table">
+      <thead class="thead-light text-center">
+        <tr>
+          <th scope="col">ID</th>
+          <th scope="col">Nombre</th>
+          <th scope="col">CV</th>
+          <th scope="col">No. Contratos</th>
+          <th scope="col">Opciones</th>
+        </tr>
+      </thead>
+      <tbody>
+      </tbody>
+    </table>
+
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
