--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
     </a>
   </nav>
   <div class="container">
-    <form class="form-inline mt-5">
+    <form class="form-inline mt-5" action="/create" method="POST">
       <div class="form-group mx-sm-3 mb-2">
         <label for="materia" class="sr-only">Materia</label>
         <input type="text" class="form-control" id="materia" placeholder="Campo 1">
